--- a/src/main/resources/templates/form.html
+++ b/src/main/resources/templates/form.html
@@ -3,41 +3,62 @@
 <head>
 <meta charset="UTF-8" ></meta>
 <title>住所検索</title>
+<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+      th:href="@{/webjars/bootstrap/css/bootstrap.min.css}" rel="stylesheet"/>
+<link href="/css/form.css" rel="stylesheet"/>
+<script src="https://code.jquery.com/jquery.min.js"
+        th:src="@{/webjars/jquery/2.2.4/jquery.min.js}"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
+        th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
 </head>
 <body>
-  <form action="/address/search" th:action="@{/address/search}" method="post">
-    <tabel>
-      <tr>
-        <td>郵便番号:</td>
-        <td><input type="text" name="addressZipCode" maxlength="8" placeholder="123-4567" /></td>
-      </tr>
-      <tr>
-        <td><button type="submit">住所を検索</button></td>
-      </tr>
-    </tabel>
-  </form>
-  <div th:if="${addressList != null and addressList.isEmpty() == false}">
-    <div>検索結果</div>
-    <table>
-      <tr>
-        <th>郵便番号</th>
-        <th>都道府県</th>
-        <th>都道府県カナ</th>
-        <th>市</th>
-        <th>市カナ</th>
-        <th>区町村</th>
-        <th>区町村カナ</th>
-      </tr>
-      <tr th:each="address : ${addressList}" th:object="${address}">
-        <td th:text="*{addressZipCode}"></td>
-        <td th:text="*{sectionName}"></td>
-        <td th:text="*{sectionKana}"></td>
-        <td th:text="*{cityName}"></td>
-        <td th:text="*{cityKana}"></td>
-        <td th:text="*{stateName}"></td>
-        <td th:text="*{stateKana}"></td>
-      </tr>
-    </table>
+  <nav class="navbar navbar-light navbar-inverse bg-faded fixed-top">
+    <a href="#" class="navbar-brand">住所検索</a>
+  </nav>
+  <div class="container-fluid">
+    <div class="row">
+      <main>
+        <section id="search-condition-area" class="col-md-12">
+          <h2>検索条件</h2>
+          <form action="/address/search" th:action="@{/address/search}" method="post">
+            <div class="form-group">
+              <lable>郵便番号:</lable>
+              <input type="text" class="form-control" name="addressZipCode" maxlength="8" placeholder="123-4567" />
+              <small class="form-text text-muted">7桁の数字をハイフンつなぎで入力してください。</small>
+            </div>
+            <button type="submit" class="btn btn-primary">住所を検索</button>
+          </form>
+        </section>
+        
+        <section id="search-result-area" class="col-md-12 table-responsive" th:if="${addressList != null and addressList.isEmpty() == false}">
+          <h2>検索結果<span id="result-count" th:text="' ' + ${addressList.size() + '件'}"></span></h2>
+          <table class="table table-striped" >
+            <thead>
+              <tr>
+                <th>郵便番号</th>
+                <th>都道府県</th>
+                <th>都道府県カナ</th>
+                <th>市</th>
+                <th>市カナ</th>
+                <th>区町村</th>
+                <th>区町村カナ</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr th:each="address : ${addressList}" th:object="${address}">
+                <td th:text="*{addressZipCode}"></td>
+                <td th:text="*{sectionName}"></td>
+                <td th:text="*{sectionKana}"></td>
+                <td th:text="*{cityName}"></td>
+                <td th:text="*{cityKana}"></td>
+                <td th:text="*{stateName}"></td>
+                <td th:text="*{stateKana}"></td>
+              </tr>
+            </tbody>
+          </table>
+        </section>
+      </main>
+    </div>
   </div>
 </body>
 </html>
