--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -1,18 +1,13 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head>
-<meta charset="UTF-8" ></meta>
-<title>404エラー</title>
-<link th:href="@{/webjars/bootstrap/css/bootstrap.min.css}" rel="stylesheet"/>
-<link href="/css/error.css" rel="stylesheet"/>
-<script th:src="@{/webjars/jquery/3.2.0/jquery.min.js}"></script>
-<script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
-<script th:src="@{/webjars/axios/dist/axios.min.js}"></script>
+<head th:replace="base :: common_head(title = ~{::title}, links = ~{::link})">
+	<title>404エラー</title>
+	<link href="/css/error.css" rel="stylesheet"/>
 </head>
 <body>
 	<div class="container">
 		<div class="content">
-		    <table th:if="${@environment.acceptsProfiles('default')}" class="table table-striped">
+		    <table th:if="${@environment.acceptsProfiles('default')}" class="table table-bordered table-striped">
 		        <tr>
 		            <th>Status</th><td th:text="${status}"></td>
 		        </tr>
