--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,13 +1,8 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head>
-<meta charset="UTF-8" ></meta>
-<title>ログイン</title>
-<link th:href="@{/webjars/bootstrap/dist/css/bootstrap.min.css}" rel="stylesheet"/>
-<link href="/css/form.css" rel="stylesheet"/>
-<script th:src="@{/webjars/jquery/3.2.0/jquery.min.js}"></script>
-<script th:src="@{/webjars/bootstrap/dist/js/bootstrap.min.js}"></script>
-<script th:src="@{/webjars/axios/dist/axios.min.js}"></script>
+<head th:replace="base :: common_head(title = ~{::title}, links = ~{::link})">
+  <title>ログイン</title>
+  <link href="/css/form.css" rel="stylesheet"/>
 </head>
 <body>
 	<div class="container">
