--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -3,6 +3,7 @@
 
 <head th:fragment="common_head">
   <meta charset="UTF-8" ></meta>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
 
   <!-- 各Viewのタイトル -->
   <title th:replace="${title}">The awesome application</title>
